Performance optimizations
git-svn-id: file:///home/svn/repos/tigase-server/trunk@580 7d282ba1-3ae6-0310-8f9b-c9008a0864d2